# rust-os

./: .gitignore  Cargo.toml  README.md  SO_FAR.md  cmds.txt  x86_64_rust_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
