[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"
authors = ["V4RSH1TH"]
description = "A simple operating system written in Rust."
license = "GPL-3.0"

[[bin]]
name = "rust-os"
test = false
bench = false

[dependencies]
bootloader = "0.9.0"

